# OCRF

./: .data.csv  .gitignore  README.rst  setup.py
benchmarks/: bench_RF.py  bench_evoutse.py  bench_isolation_forest.py  bench_lof.py  bench_lsanomaly.py  bench_ocrf.py  bench_ocsvm.py  bench_one_class_forest.py  bench_oneclassrf.py  bench_orca.py  bench_plot_orca.py  (+1 more)
sklearn/ensemble/ocrf_open/ocrf_v0.6/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  cmake_optim.sh  script_learning.sh
sklearn/ensemble/ocrf_open/ocrf_v0.6/RELEASE/: ocrf
sklearn/ensemble/ocrf_open/ocrf_v0.6/include/: arff.h  attribute.h  bagging.h  cart.h  datahandler.h  dataset.h  dforest.h  dtinduc.h  dtree.h  dtree.h.save  f_dtree.h  f_node.h  f_node.h.save  forestri.h  global.h  instance.h  node.h  ocforest.h  ocforest.h.save  outliergenerator.h  result.h  rfexception.h  rfinduc.h  rndtree.h  rule.h  utils.h
sklearn/ensemble/ocrf_open/ocrf_v0.6/results/res/: log.txt
sklearn/ensemble/ocrf_open/ocrf_v0.6/results/res/iris_setosa_4D/: results_decision_iris_setosa_4D_method_1_krsm_4_beta_10_alpha_1.2_rejetbornes_0.txt  results_iris_setosa_4D_method_1_krsm_4_beta_10_alpha_1.2_rejetbornes_0.txt
sklearn/ensemble/ocrf_open/ocrf_v0.6/src/: arff.cpp  arff.cpp.save  attribute.cpp  bagging.cpp  cart.cpp  datahandler.cpp  datahandler.cpp.save  dataset.cpp  dataset.cpp.save  dforest.cpp  dforest.cpp.save  dtinduc.cpp  dtree.cpp  dtree.cpp.save  f_dtree.cpp  f_dtree.cpp.save  f_node.cpp  forestri.cpp  instance.cpp  main.cpp  main.cpp.save  node.cpp  node.cpp.save  ocforest.cpp  ocforest.cpp.save  outliergenerator.cpp  outliergenerator.cpp.save  result.cpp  result.cpp.save  rfexception.cpp  rfinduc.cpp  rndtree.cpp  rndtree.cpp.save  rule.cpp  utils.cpp  utils.cpp.save
(+734 files in other folders)
